<resources>
    <string name="app_name">SQL_Practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_student_details">Enter Student Details</string>
    <string name="enter_the_age">Enter the age</string>
    <string name="enter_the_course">Enter the course</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="enter_the_phone_no">Enter the phone No</string>
    <string name="add_student">Add student</string>
    <string name="enter_name">Enter Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>